# dekunobou-gui

./: .gitignore  CMakeLists.txt  README.md  dekunobou.hpp  disp.cpp  display.cpp  draw.cpp  engine.hpp  gui.hpp  main.cpp  mouse_evet.cpp  othello.hpp
